# SSHook

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: security.yml
app/: __init__.py  config.py  formatters.py  logger.py  main.py  notifier.py  ssh_watcher.py  state_store.py
config/: .env.example
samples/: auth.log.sample
scripts/: example-env-setup.sh  healthcheck.sh  install.sh  test_webhook.sh  uninstall.sh
services/: sshook.service
tests/: test_security_regressions.py
