[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sshook"
version = "0.1.0"
description = "Open source SSH alerts for Linux servers using Discord webhooks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SSHook contributors" }
]
keywords = ["ssh", "discord", "webhook", "security", "linux"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
sshook = "app.main:main"

[tool.setuptools]
packages = ["app"]
